envoy-opa/lms/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lms
  name: lms
  namespace: default
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30068
    port: 4001
    protocol: TCP
    targetPort: 4000
  selector:
    app: lms
  sessionAffinity: None
  type: LoadBalancer
